<?xml version="1.0" encoding="utf-8" ?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="0dip"
    android:layout_gravity="fill"
    android:layout_weight="1" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="0dip"
        android:layout_gravity="fill_horizontal"
        android:orientation="vertical"
        android:padding="5dip" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_url" />

        <EditText
            android:id="@+id/feed_url"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/websiteorfeed"
            android:inputType="textUri"
            android:singleLine="true"
            android:text="" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/feed_title" />

        <EditText
            android:id="@+id/feed_title"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/optional"
            android:singleLine="true" />

        <CheckBox
            android:id="@+id/wifionlycheckbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/refreshonwifionly" />

        <CheckBox
            android:id="@+id/standarduseragentcheckbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/settings_standarduseragent" />

        <CheckBox
            android:id="@+id/hidereadcheckbox"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="@string/contextmenu_hideread" />
    </LinearLayout>

</ScrollView>